name:                timus-solutions
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/timus-solutions#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable prob1008
  hs-source-dirs:      app
  main-is:             Prob1008.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timus-solutions
                     , containers
                     , array
                     , mtl
  default-language:    Haskell2010


executable prob1136
  hs-source-dirs:      app
  main-is:             Prob1136.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timus-solutions
                     , containers
                     , array
  default-language:    Haskell2010

executable prob1080
  hs-source-dirs:      app
  main-is:             Prob1080.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timus-solutions
                     , containers
                     , array
  default-language:    Haskell2010



executable prob1119
  hs-source-dirs:      app
  main-is:             Prob1119.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timus-solutions
                     , containers
                     , array
  default-language:    Haskell2010


executable prob1106
  hs-source-dirs:      app
  main-is:             Prob1106.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timus-solutions
                     , containers
                     , array
  default-language:    Haskell2010

executable prob1033
  hs-source-dirs:      app
  main-is:             Prob1033.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timus-solutions
                     , containers
                     , array
  default-language:    Haskell2010

executable prob1022
  hs-source-dirs:      app
  main-is:             Prob1022.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timus-solutions
                     , containers
  default-language:    Haskell2010

executable timus-solutions-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timus-solutions
  default-language:    Haskell2010

test-suite timus-solutions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , timus-solutions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/timus-solutions
